--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,6 @@
-  <ul id="messages"></ul>
+  <div id="chat">
+    <ul id="messages"></ul>
+  </div>
 
   <form id="input">
     <div class="form-group">
