--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,11 +6,18 @@
   <!-- Style -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/sidebar.css">
 
 </head>
 <body>
 
+
   {{{body}}}
+
+  <div id="sidebar">
+
+
+  </div>
 
   <audio controls loop autoplay style="display:none">
     <source src="/audio/The Mighty Boosh - Searching for The New Sound.mp3" type="audio/mpeg">
