--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,12 +1,93 @@
+  <nav class="navbar navbar-fixed-top navbar-dark bg-primary">
+          <h1> WELCOME TO THE BOOSH ROOM </H1>
+      <button class="navbar-toggler hidden-lg-up" style="float:right; background-color: #F3E500" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Members</button>
+      <div class="collapse navbar-toggleable-md" id="navbarResponsive">
+          <a class="navbar-brand" href="#">BS <strong>Hover Sidebar</strong></a>
+          <br class="hidden-lg-up">
+          <br class="hidden-lg-up">
+          <ul class="nav navbar-nav hidden-lg-up">
+              <li class="nav-item active">
+                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+      		<li class="nav-item">
+      			<a class="nav-link" href="#about" title="Go to About Us section">About</a>
+      		</li>
+      		<li class="nav-item">
+      			<a class="nav-link" href="#resume" title="Navigate to Jonathan Adcox IT Resume">Resume</a>
+      		</li>
+      		<li class="nav-item">
+      			<a class="nav-link" href="#skills" title="Navigate to 'Our Services' section">Skills</a>
+      		</li>
+          </ul>
+          <ul class="nav navbar-nav hidden-md-down float-lg-right">
+              <li class="nav-item">
+                  <button id="menu-toggle" href="#" class="navbar-toggler float-lg-right toggle" type="button" data-toggle="collapse" data-target="#sidebar-wrapper" aria-controls="sidebar-wrapper" aria-expanded="false" aria-label="Toggle navigation"></button>
+              </li>
+          </ul>
+          <form class="form-inline float-lg-right">
+              <input class="form-control" type="text" placeholder="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+          <nav id="sidebar-wrapper">
+          	<ul class="sidebar-nav">
+          		<a id="menu-close" href="#" type="button" class="btn btn-danger close hidden-lg-up float-xs-right toggle" data-dismiss="sidebar-wrapper" aria-label="Close"></a>
+          		<li class="sidebar-brand">
+          			<a href="#top">BS <strong>Hover Sidebar</strong></a>
+          		</li>
+          		<li>
+          			<a href="#top" title="Go to Top">Home</a>
+          		</li>
+          		<li>
+          			<a href="#about" title="Go to About Us section">About</a>
+          		</li>
+          		<li>
+          			<a href="#resume" title="Navigate to Jonathan Adcox IT Resume">Resume</a>
+          		</li>
+          		<li>
+          			<a href="#skills" title="Navigate to 'Our Services' section">Skills</a>
+          		</li>
+          	</ul>
+          </nav>
+      </div>
+  </nav>
+  <div class="container">
+  	<div class="row">
+  		<h2 class="text-xs-center">Demo Header</h2>
+  		<p>
+  		    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse accumsan mi eros, bibendum pellentesque augue maximus sed. Vestibulum interdum purus at luctus consequat. Phasellus ac aliquam massa. In at cursus velit. Ut purus purus, consequat ac elit et, mattis pellentesque leo. Aliquam luctus est sed urna sollicitudin, sed interdum felis volutpat. In sed dolor ac turpis porttitor interdum. Vestibulum egestas urna nec ligula finibus tincidunt. Quisque non augue eros. In dignissim, ex nec scelerisque ultrices, arcu dui consectetur ante, sed feugiat risus sem varius lectus. Maecenas non imperdiet tortor. In vel fringilla urna, in scelerisque nibh.
+  		</p>
+  	</div>
+  	<div class="row">
+  		<h2 class="text-xs-center">I am Viewport Responsive</h2>
+  		<p>
+  		    Change the screen size. notice how the sidebar disapears? Notice how the navbar is filled with links. It is a simple hide effect with Bootstrap.
+  		</p>
+  	</div>
+  	<hr>
+  </div>
+
+
   <div id="chat">
     <ul id="messages"></ul>
   </div>
 
-  <form id="input">
-    <div class="form-group">
-      <input id="text" type="text" class="form-control" autocomplete="off">
-      <input id="send" class="form-control" type="submit" value="Send">
+
+
+  <form id="input-message">
+    <div class="input-group">
+      <span class="input-group-addon" id="basic-addon1">+</span>
+
+      <!-- <textarea rows="5" type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1"> -->
+        <input type="textarea" id="text" rows="5">
+      <!-- </textarea> -->
     </div>
   </form>
+
+  <!-- <form class="input-group">
+    <div class="form-group">
+      <input id="text" type="text" class="form-control" autocomplete="off">
+    </div>
+    <button class="input-group-addon" type="button" id="media-menu">+</button>
+  </form> -->
 
   {{>character-select}}
