--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,7 +5,16 @@
 
   <!-- Style -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+  <link rel="stylesheet" href="/css/sidebar.css">
+
   <link rel="stylesheet" href="/css/style.css">
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Freckle+Face" >
+
+  <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
 
 </head>
 <body>
@@ -17,6 +26,7 @@
   <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
   <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="/js/sidebar.js"></script>
   <script src="/js/script.js"></script>
 </body>
 </html>
