--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -19,7 +19,7 @@ html{
 }
 
 h1 {
-  color: #FFFFFF
+  color: #FFFFFF;
   text-align: center;
   margin-left: 5px;
   font-family: 'Freckle Face', cursive;
