--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
   <nav class="navbar navbar-fixed-top navbar-dark bg-primary">
           <h1> WELCOME TO THE BOOSH ROOM </H1>
-      <button class="navbar-toggler hidden-lg-up" style="float:right; background-color: #F3E500" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Members</button>
+      <button class="navbar-toggler hidden-lg-up" style="float:right; color: black; background-color: #F3E500" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Members</button>
       <div class="collapse navbar-toggleable-md" id="navbarResponsive">
           <a class="navbar-brand" href="#">BS <strong>Hover Sidebar</strong></a>
           <br class="hidden-lg-up">
@@ -50,7 +50,8 @@
           </nav>
       </div>
   </nav>
-  <div class="container">
+
+  <!-- <div class="container">
   	<div class="row">
   		<h2 class="text-xs-center">Demo Header</h2>
   		<p>
@@ -64,7 +65,7 @@
   		</p>
   	</div>
   	<hr>
-  </div>
+  </div> -->
 
 
   <div id="chat">
