Tried to make dropup menu

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -68,21 +68,7 @@
   </div> -->
 
 
-  <div id="chat">
-    <ul id="messages"></ul>
-  </div>
-
-
-
-  <form id="input-message">
-    <div class="input-group">
-      <span class="input-group-addon" id="basic-addon1">+</span>
-
-      <!-- <textarea rows="5" type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1"> -->
-        <input type="textarea" id="text" rows="5">
-      <!-- </textarea> -->
-    </div>
-  </form>
+  {{>footer}}
 
   <!-- <form class="input-group">
     <div class="form-group">
