--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,54 +1,32 @@
   <nav class="navbar navbar-fixed-top navbar-dark bg-primary">
-          <h1> WELCOME TO THE BOOSH ROOM </H1>
-      <button class="navbar-toggler hidden-lg-up" style="float:right; color: black; background-color: #F3E500" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Members</button>
-      <div class="collapse navbar-toggleable-md" id="navbarResponsive">
-          <a class="navbar-brand" href="#">BS <strong>Hover Sidebar</strong></a>
-          <br class="hidden-lg-up">
-          <br class="hidden-lg-up">
-          <ul class="nav navbar-nav hidden-lg-up">
-              <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-              </li>
-      		<li class="nav-item">
-      			<a class="nav-link" href="#about" title="Go to About Us section">About</a>
-      		</li>
-      		<li class="nav-item">
-      			<a class="nav-link" href="#resume" title="Navigate to Jonathan Adcox IT Resume">Resume</a>
-      		</li>
-      		<li class="nav-item">
-      			<a class="nav-link" href="#skills" title="Navigate to 'Our Services' section">Skills</a>
-      		</li>
-          </ul>
-          <ul class="nav navbar-nav hidden-md-down float-lg-right">
-              <li class="nav-item">
-                  <button id="menu-toggle" href="#" class="navbar-toggler float-lg-right toggle" type="button" data-toggle="collapse" data-target="#sidebar-wrapper" aria-controls="sidebar-wrapper" aria-expanded="false" aria-label="Toggle navigation"></button>
-              </li>
-          </ul>
-          <form class="form-inline float-lg-right">
-              <input class="form-control" type="text" placeholder="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
-          <nav id="sidebar-wrapper">
-          	<ul class="sidebar-nav">
-          		<a id="menu-close" href="#" type="button" class="btn btn-danger close hidden-lg-up float-xs-right toggle" data-dismiss="sidebar-wrapper" aria-label="Close"></a>
-          		<li class="sidebar-brand">
-          			<a href="#top">BS <strong>Hover Sidebar</strong></a>
-          		</li>
-          		<li>
-          			<a href="#top" title="Go to Top">Home</a>
-          		</li>
-          		<li>
-          			<a href="#about" title="Go to About Us section">About</a>
-          		</li>
-          		<li>
-          			<a href="#resume" title="Navigate to Jonathan Adcox IT Resume">Resume</a>
-          		</li>
-          		<li>
-          			<a href="#skills" title="Navigate to 'Our Services' section">Skills</a>
-          		</li>
-          	</ul>
-          </nav>
-      </div>
+    <h1> WELCOME TO THE BOOSH ROOM </H1>
+
+    <ul class="nav navbar-nav hidden-md-down float-lg-right">
+        <li class="nav-item">
+            <button id="menu-toggle" style="color:blue" href="#" class="navbar-toggler float-lg-right toggle" type="button" data-toggle="collapse" data-target="#sidebar-wrapper" aria-controls="sidebar-wrapper" aria-expanded="false" aria-label="Toggle navigation">Members</button>
+        </li>
+    </ul>
+
+    <nav id="sidebar-wrapper">
+    	<ul class="sidebar-nav">
+    		<a id="menu-close" href="#" type="button" class="btn btn-danger close hidden-lg-up float-xs-right toggle" data-dismiss="sidebar-wrapper" aria-label="Close"></a>
+    		<li class="sidebar-brand">
+    			<a style="color:#00DCF4" href="#top">BS <strong>Members</strong></a>
+    		</li>
+    		<!-- <li>
+    			<a href="#top" title="Go to Top">Home</a>
+    		</li>
+    		<li>
+    			<a href="#about" title="Go to About Us section">About</a>
+    		</li>
+    		<li>
+    			<a href="#resume" title="Navigate to Jonathan Adcox IT Resume">Resume</a>
+    		</li>
+    		<li>
+    			<a href="#skills" title="Navigate to 'Our Services' section">Skills</a>
+    		</li> -->
+    	</ul>
+    </nav>
   </nav>
 
   <div id="chat">
