--- a/views/partials/character-select.hbs
+++ b/views/partials/character-select.hbs
@@ -7,7 +7,7 @@
       </div>
       <div class="modal-body">
 
-        <img class="img-responsive img-rounded" id="avatar" src="/images/howard-moon.jpg"/>
+        <img class="img-responsive img-rounded" id="avatar" src="/images/howard.jpeg"/>
 
         <select id="character">
           {{#each characters}}
