gave up on dropdown

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -31,11 +31,11 @@
 
     <div class="btn-group dropup media-menu">
       <button type="button" class="btn btn-secondary">Dropup</button>
-      <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <button type="button" id="dropping" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <span class="sr-only">Toggle Dropdown</span>
       </button>
       <div class="dropdown-menu">
-        <button class="dropdown-item" type="button">sound</button>
+        <button class="dropdown-item" aria-labelledby="dropping" type="button">sound</button>
         <!-- Dropdown menu links -->
       </div>
     </div>
