--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
 
     <ul class="nav navbar-nav hidden-md-down float-lg-right">
         <li class="nav-item">
-            <button id="menu-toggle" style="color:blue" href="#" class="navbar-toggler float-lg-right toggle" type="button" data-toggle="collapse" data-target="#sidebar-wrapper" aria-controls="sidebar-wrapper" aria-expanded="false" aria-label="Toggle navigation">Members</button>
+            <button id="menu-toggle" style="color:#00DCF4" href="#" class="navbar-toggler float-lg-right toggle" type="button" data-toggle="collapse" data-target="#sidebar-wrapper" aria-controls="sidebar-wrapper" aria-expanded="false" aria-label="Toggle navigation">Members</button>
         </li>
     </ul>
 
@@ -11,8 +11,19 @@
     	<ul class="sidebar-nav">
     		<a id="menu-close" href="#" type="button" class="btn btn-danger close hidden-lg-up float-xs-right toggle" data-dismiss="sidebar-wrapper" aria-label="Close"></a>
     		<li class="sidebar-brand">
-    			<a style="color:#00DCF4" href="#top">BS <strong>Members</strong></a>
+    			<a style="color:#00DCF4" href="#top">Boosh <strong>Members</strong></a>
     		</li>
+        <div id="member-list">
+        <ul>
+          <li> </li>
+          <li> Vince </li>
+          <li> Bollo </li>
+          <li> Lester Cornflakes </li>
+          <li> Old Gregg </li>
+          <li> The Moon </li>
+          <li> Howard </li>
+        </ul>
+      </div>
     		<!-- <li>
     			<a href="#top" title="Go to Top">Home</a>
     		</li>
