--- a/views/partials/character-select.hbs
+++ b/views/partials/character-select.hbs
@@ -20,7 +20,7 @@
         <button type="button" class="btn btn-primary" data-dismiss="modal">Okay</button>
       </div>
 
-      <audio controls autoplay loop id="theme-tune" style="display:none">
+      <audio id="theme-tune" controls autoplay loop style="display:none">
         <source src="/audio/The Mighty Boosh - Searching for The New Sound.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
